<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/main_page"
        android:title="@string/main_page">
        <!--android:showAsAction="ifRoom"-->

        <!-- "file" submenu -->
        <menu>
            <item android:id="@+id/menu_main"
                android:title="@string/menu" />
            <item android:id="@+id/services"
                android:title="@string/services" />
            <item android:id="@+id/marketplace"
                android:title="@string/marketplace" />

        </menu>
    </item>
    <!--android:icon="@drawable/ic_new_game"-->

    <item android:id="@+id/settings"
        android:title="@string/settings" />
    <!--android:icon="@drawable/ic_help"-->
    <item android:id="@+id/help"
        android:title="@string/help" />

    <item android:id="@+id/SwapAccount"
        android:title="@string/swap_account" />
    <item android:id="@+id/about"
        android:title="@string/about" />
    <item android:id="@+id/logout"
        android:title="@string/logout" />          <!--android:icon="@drawable/ic_help"-->

</menu>